# TG2_PrograWeb_G3

./: .editorconfig  .env.example  .gitignore  CONTRIBUTING.md  README.md  SOLID_LeadUniversity.pptx  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: tests.yml
docs/: REPORTE_PERSONA2_FRONTEND.md  REPORTE_PERSONA3_ROBUSTECIMIENTO.md  REPORTE_PERSONA4_DOCUMENTACION.md
src/planificahoy/: __init__.py  config.py  errors.py  main.py  models.py  planning_service.py  ports.py  recommendation_service.py
src/planificahoy/adapters/: open_meteo.py
src/planificahoy/api/: routes.py
src/planificahoy/frontend/: index.html
src/planificahoy/frontend/css/: styles.css
src/planificahoy/frontend/js/: app.js
tests/: test_open_meteo_adapter.py  test_planning_service.py  test_recommendation_service.py  test_routes.py
